<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LastActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/lukaresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="154dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textStyle="bold|italic"
        android:text="@string/lukadoncic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/devinresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textStyle="bold|italic"
        android:text="@string/devinbooker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lukaresults" />

    <TextView
        android:id="@+id/tatumresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:text="@string/jaysontatum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devinresults" />

    <TextView
        android:id="@+id/antetoresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:fontFamily="@font/roboto"
        android:text="@string/giannisanteto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tatumresults" />

    <TextView
        android:id="@+id/nikolaresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:text="@string/nikolaJokic"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/antetoresults" />

    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/resultados"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:fontFamily="@font/roboto"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageDoncic"
        android:layout_width="87dp"
        android:layout_height="68dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results"
        app:srcCompat="@drawable/doncic" />

    <ImageView
        android:id="@+id/imageBooker"
        android:layout_width="78dp"
        android:layout_height="62dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDoncic"
        app:srcCompat="@drawable/booker" />

    <ImageView
        android:id="@+id/imageTatum"
        android:layout_width="87dp"
        android:layout_height="94dp"
        android:layout_marginStart="47dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBooker"
        app:srcCompat="@drawable/tatum" />

    <ImageView
        android:id="@+id/imageAnteto"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTatum"
        app:srcCompat="@drawable/giannis" />

    <ImageView
        android:id="@+id/imageJokic"
        android:layout_width="104dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAnteto"
        app:srcCompat="@drawable/jokic" />

    <TextView
        android:id="@+id/votosLuka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/votosDevin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="61dp"
        android:text="TextView"
        android:fontFamily="@font/roboto"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votosLuka" />

    <TextView
        android:id="@+id/votosTatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="61dp"
        android:text="TextView"
        android:fontFamily="@font/roboto"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votosDevin" />

    <TextView
        android:id="@+id/votosGiannis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="60dp"
        android:text="TextView"
        android:fontFamily="@font/roboto"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votosTatum" />

    <TextView
        android:id="@+id/votosJokic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="61dp"
        android:text="TextView"
        android:textStyle="bold|italic"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votosGiannis" />
</androidx.constraintlayout.widget.ConstraintLayout>